# fritz

./: .gitignore  LICENSE-MIT  README  README.md  config.yml.sample  fritz.py  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt  staticcheck.conf
cmd/: cmd.go
fritz/: api.py  typing.py
internal/: fritz.go
internal/go-fritzbox/: LICENSE  README.md  fritzbox.go  session.go
