[tool.poetry]
name = "fritz"
version = "0.1.0"
description = "FRITZ!Box (Simple) Interface"
authors = ["lukasjoc <jochamlu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.6.15"
charset-normalizer = "2.0.12"
fritzconnection = "1.9.1"
idna = "3.3"
PyYAML = "6.0"
requests = "2.28.0"
urllib3 = "1.26.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
